added   public static <D, R, F extends Function<? extends D, ? extends R>> Expression<D, R, F> Function.compile(Class<? extends D> domainClass, Class<? extends R> coDomainClass, Class<? extends F> functionClass, String  expression, Context context)